# PE-Hackathon-Template-2026

./: .coverage  .dockerignore  .env.example  ALERT_RUNBOOK.md  API.md  BOTTLENECK_REPORT_TEMPLATE.md  CAPACITY_PLAN_TEMPLATE.md  DECISION_LOG.md  DEPLOYMENT.md  Dockerfile  ENVIRONMENT.md  FAILURE_MODES.md  MONITORING.md  QUEST_EVIDENCE_CHECKLIST.md  README.md  ROLLBACK.md  RUNBOOKS.md  SCALABILITY_ANALYSIS_TEMPLATE.md  SCALING.md  TROUBLESHOOTING.md  compose.monitoring.yaml  compose.yaml  coverage.xml  pyproject.toml  run.py
.github/workflows/: ci.yml
app/: __init__.py  cache.py  database.py  observability.py
app/models/: __init__.py  short_url.py  url_event.py  user.py
app/routes/: __init__.py  urls.py
app/seed/: events.csv  loader.py  urls.csv  users.csv
load/: redirect_hot_path.js
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: url-shortener-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
nginx/: default.conf
scripts/: reliability_demo.sh
tests/: conftest.py  test_app_factory.py  test_cache.py  test_error_handlers.py  test_events.py  test_health.py  test_observability.py  test_redirects.py  test_route_validators.py  test_seed_loader.py  test_seed_loader_unit.py  test_urls.py  test_users.py
